# polyCode

./: AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_adapter.rs  codex_adapter.rs  commands.rs  gemini_adapter.rs  lib.rs  main.rs  state.rs  storage.rs  types.rs
src/components/common/: NewProjectDialog.tsx  NewSessionDialog.tsx
src/components/composer/: Composer.tsx
src/components/git/: GitPanel.tsx
src/components/session/: MessageView.tsx  SessionHeader.tsx
src/components/settings/: SettingsPanel.tsx  appearance.ts
src/components/sidebar/: ProjectList.tsx  ProjectTree.tsx  SessionList.tsx  Sidebar.tsx
src/constants/: models.ts
src/i18n/: index.ts
src/services/: tauri.ts
src/store/: index.ts
src/styles/: index.css
src/types/: index.ts
