[package]
name = "polycode"
default-run = "polyCode"
version = "0.1.0"
description = "A Tauri desktop client for Codex and Claude Code"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "polycode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "polyCode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-liquid-glass = "0.1"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "sync", "time", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
